# futon6

./: .gitignore  CLAUDE.md  PLAN.md  RESPONSE-TO-REVIEWER.md  REVIEWER.md  entangled.toml  pyproject.toml
data/: ct-evaluation-2x2.json  math-terms.tsv  nlab-ct-reference.json  pattern-tags.edn  pm-terms.tsv  scope-metatheory.edn  scope-prompt-template.txt  unified-metatheory.edn  wiring-prompt-template.txt
resources/: AI4CI (Mathsistant).txt  ati.html  epsrc.html  sfi.html
scripts/: CODEX-validate-latexml.md  aif_plus_method_audit.py  analyze-p4-n4-full-normalized.py  analyze-p4-n4-sos-bruteforce.py  apply-proof-boxes.py  assemble-wiring.py  audit-planetmath-scopes.py  audit-scope-binders.py  build-golden-50.py  build-handoff-pdf.py  build-hypergraph-showcase.py  build-ner-kernel.bb  build-nnexus-scope-delta-demo.py  build-problem7-approach23-wiring-library.py  build-problem7-gap-wiring-library.py  check-latex-escaped-prose-math.py  check-latex-syntax-violations.py  check-math-word-allowlist.py  check-ratchet-fixedw-typesetting.py  codex-unified-repair.py  compare-wiring.py  compute-alpha-gap.py  compute-alpha-rho.py  ct-verifier.py  enrich-proof-wiring.py  evaluate-superpod-run.py  explore-p4-n4-3piece-quick.py  explore-p4-n4-A-coefficients.py  explore-p4-n4-K-T2R-d024-gram.py  explore-p4-n4-K-T2R-fast.py  explore-p4-n4-K-T2R-structure.py  explore-p4-n4-K-T2R-uv.py  explore-p4-n4-K-factored-uq.py  explore-p4-n4-R-surplus-alg.py  explore-p4-n4-R-surplus-gram.py  explore-p4-n4-R-surplus-gram2.py  explore-p4-n4-R-surplus-proof.py  explore-p4-n4-T2R-partition.py  (+196 more)
(+396 files in other folders)
