[project]
name = "futon6"
version = "0.1.0"
description = "Comprehensive mathematics dictionary — NLP and graph enrichment"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
    "edn-format>=0.7.5",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ipython",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
