[project]
name = "futon6"
version = "0.1.0"
description = "Comprehensive mathematics dictionary — NLP and graph enrichment"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
    "edn-format>=0.7.5",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ipython",
]
gpu = [
    "torch>=2.0",
    "accelerate>=0.25.0",
    "flash-attn>=2.0; platform_system == 'Linux'",
]
lwgm = [
    "torch>=2.0",
    "faiss-cpu>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
